--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-VITE_ENV=development
-VITE_EMAILJS_SERVICE_ID=
-VITE_EMAILJS_TEMPLATE_ID=
-VITE_EMAILJS_PUBLIC_KEY=
+EMAILJS_SERVICE_ID=
+EMAILJS_TEMPLATE_ID=
+EMAILJS_PUBLIC_KEY=
+APP_GOOGLE_SITE_VERIFICATION=
