--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
     "lucide-react": "^0.469.0",
     "next": "14.2.1",
     "next-intl": "^3.26.3",
-    "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
