--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.469.0",
     "next": "14.2.1",
     "next-intl": "^3.26.3",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
